@@ -1,31 +1,35 @@
 package com.quiddity.dao;
 
+import java.sql.Connection;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.sql.Timestamp;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+
 import com.quiddity.model.Catalogo;
 import com.quiddity.util.ConexionDB;
-
-import java.sql.*;
-import java.util.*;
 
 public class CatalogoEstadisticasDAO {
 
     // ─── TOP N MÁS VENDIDOS ────────────────────────────────────────────────────
-
     public List<Map<String, Object>> getTopVendidos(int limite) {
         List<Map<String, Object>> resultado = new ArrayList<>();
-        String sql = """
-                SELECT c.id, c.nombre, c.categoria, c.marca, c.imagen, c.precio,
-                       SUM(pi.cantidad) AS total_vendido,
-                       SUM(pi.cantidad * pi.precio_unitario) AS ingresos
-                FROM pedido_item pi
-                JOIN catalogo c ON pi.catalogo_id = c.id
-                JOIN pedido p ON pi.pedido_id = p.id
-                WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                GROUP BY c.id, c.nombre, c.categoria, c.marca, c.imagen, c.precio
-                ORDER BY total_vendido DESC
-                LIMIT ?
-                """;
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql)) {
+        String sql
+                = "SELECT c.id, c.nombre, c.categoria, c.marca, c.imagen, c.precio, "
+                + "SUM(pi.cantidad) AS total_vendido, "
+                + "SUM(pi.cantidad * pi.precio_unitario) AS ingresos "
+                + "FROM pedido_item pi "
+                + "JOIN catalogo c ON pi.catalogo_id = c.id "
+                + "JOIN pedido p ON pi.pedido_id = p.id "
+                + "WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO') "
+                + "GROUP BY c.id, c.nombre, c.categoria, c.marca, c.imagen, c.precio "
+                + "ORDER BY total_vendido DESC "
+                + "LIMIT ?";
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql)) {
             ps.setInt(1, limite);
             try (ResultSet rs = ps.executeQuery()) {
                 while (rs.next()) {
@@ -48,23 +52,19 @@ public class CatalogoEstadisticasDAO {
     }
 
     // ─── VENTAS POR CATEGORÍA ─────────────────────────────────────────────────
-
     public List<Map<String, Object>> getVentasPorCategoria() {
         List<Map<String, Object>> resultado = new ArrayList<>();
-        String sql = """
-                SELECT c.categoria,
-                       SUM(pi.cantidad) AS unidades_vendidas,
-                       SUM(pi.cantidad * pi.precio_unitario) AS ingresos
-                FROM pedido_item pi
-                JOIN catalogo c ON pi.catalogo_id = c.id
-                JOIN pedido p ON pi.pedido_id = p.id
-                WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                GROUP BY c.categoria
-                ORDER BY ingresos DESC
-                """;
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql);
-                ResultSet rs = ps.executeQuery()) {
+        String sql
+                = "SELECT c.categoria, "
+                + "SUM(pi.cantidad) AS unidades_vendidas, "
+                + "SUM(pi.cantidad * pi.precio_unitario) AS ingresos "
+                + "FROM pedido_item pi "
+                + "JOIN catalogo c ON pi.catalogo_id = c.id "
+                + "JOIN pedido p ON pi.pedido_id = p.id "
+                + "WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO') "
+                + "GROUP BY c.categoria "
+                + "ORDER BY ingresos DESC";
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql); ResultSet rs = ps.executeQuery()) {
             while (rs.next()) {
                 Map<String, Object> fila = new LinkedHashMap<>();
                 fila.put("categoria", rs.getString("categoria"));
@@ -79,25 +79,22 @@ public class CatalogoEstadisticasDAO {
     }
 
     // ─── PRODUCTOS SIN VENTAS EN LOS ÚLTIMOS N DÍAS ───────────────────────────
-
     public List<Catalogo> getProductosSinVentas(int dias) {
         List<Catalogo> lista = new ArrayList<>();
-        String sql = """
-                SELECT * FROM catalogo
-                WHERE id NOT IN (
-                    SELECT DISTINCT pi.catalogo_id
-                    FROM pedido_item pi
-                    JOIN pedido p ON pi.pedido_id = p.id
-                    WHERE p.creado_en >= NOW() - INTERVAL '%d days'
-                      AND p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                )
-                ORDER BY nombre
-                """.formatted(dias);
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql);
-                ResultSet rs = ps.executeQuery()) {
-            while (rs.next())
+        String sql = String.format(
+                "SELECT * FROM catalogo "
+                + "WHERE id NOT IN ( "
+                + "    SELECT DISTINCT pi.catalogo_id "
+                + "    FROM pedido_item pi "
+                + "    JOIN pedido p ON pi.pedido_id = p.id "
+                + "    WHERE p.creado_en >= NOW() - INTERVAL '%d days' "
+                + "      AND p.estado NOT IN ('CANCELADO', 'DEVUELTO') "
+                + ") "
+                + "ORDER BY nombre", dias);
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql); ResultSet rs = ps.executeQuery()) {
+            while (rs.next()) {
                 lista.add(mapear(rs));
+            }
         } catch (SQLException e) {
             System.err.println("[CatalogoEstadisticasDAO] Error en getProductosSinVentas: " + e.getMessage());
         }
@@ -105,19 +102,16 @@ public class CatalogoEstadisticasDAO {
     }
 
     // ─── INGRESOS TOTALES ─────────────────────────────────────────────────────
-
     public double getIngresosTotales() {
-        String sql = """
-                SELECT COALESCE(SUM(pi.cantidad * pi.precio_unitario), 0) AS total
-                FROM pedido_item pi
-                JOIN pedido p ON pi.pedido_id = p.id
-                WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                """;
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql);
-                ResultSet rs = ps.executeQuery()) {
-            if (rs.next())
+        String sql
+                = "SELECT COALESCE(SUM(pi.cantidad * pi.precio_unitario), 0) AS total "
+                + "FROM pedido_item pi "
+                + "JOIN pedido p ON pi.pedido_id = p.id "
+                + "WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')";
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql); ResultSet rs = ps.executeQuery()) {
+            if (rs.next()) {
                 return rs.getDouble("total");
+            }
         } catch (SQLException e) {
             System.err.println("[CatalogoEstadisticasDAO] Error en getIngresosTotales: " + e.getMessage());
         }
@@ -125,23 +119,19 @@ public class CatalogoEstadisticasDAO {
     }
 
     // ─── INGRESOS POR CATEGORÍA ───────────────────────────────────────────────
-
     public List<Map<String, Object>> getIngresosPorCategoria() {
         List<Map<String, Object>> resultado = new ArrayList<>();
-        String sql = """
-                SELECT c.categoria,
-                       SUM(pi.cantidad * pi.precio_unitario) AS ingresos,
-                       COUNT(DISTINCT p.id) AS num_pedidos
-                FROM pedido_item pi
-                JOIN catalogo c ON pi.catalogo_id = c.id
-                JOIN pedido p ON pi.pedido_id = p.id
-                WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                GROUP BY c.categoria
-                ORDER BY ingresos DESC
-                """;
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql);
-                ResultSet rs = ps.executeQuery()) {
+        String sql
+                = "SELECT c.categoria, "
+                + "SUM(pi.cantidad * pi.precio_unitario) AS ingresos, "
+                + "COUNT(DISTINCT p.id) AS num_pedidos "
+                + "FROM pedido_item pi "
+                + "JOIN catalogo c ON pi.catalogo_id = c.id "
+                + "JOIN pedido p ON pi.pedido_id = p.id "
+                + "WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO') "
+                + "GROUP BY c.categoria "
+                + "ORDER BY ingresos DESC";
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql); ResultSet rs = ps.executeQuery()) {
             while (rs.next()) {
                 Map<String, Object> fila = new LinkedHashMap<>();
                 fila.put("categoria", rs.getString("categoria"));
@@ -156,7 +146,6 @@ public class CatalogoEstadisticasDAO {
     }
 
     // ─── MAPPER (copia del de CatalogoDAO) ────────────────────────────────────
-
     private Catalogo mapear(ResultSet rs) throws SQLException {
         return new Catalogo(
                 rs.getInt("id"),
@@ -171,30 +160,27 @@ public class CatalogoEstadisticasDAO {
                 rs.getBoolean("me_gusta"),
                 rs.getBoolean("activo"));
     }
-    
+
     // ─── TOP VENDIDOS POR PERÍODO
     // ──────────────────────────────────────────────────
-
     public List<Map<String, Object>> getTopVendidosPorPeriodo(int limite,
             java.time.LocalDate desde,
             java.time.LocalDate hasta) {
         List<Map<String, Object>> resultado = new ArrayList<>();
-        String sql = """
-                SELECT c.id, c.nombre, c.categoria, c.marca, c.imagen, c.precio,
-                       SUM(pi.cantidad) AS total_vendido,
-                       SUM(pi.cantidad * pi.precio_unitario) AS ingresos
-                FROM pedido_item pi
-                JOIN catalogo c ON pi.catalogo_id = c.id
-                JOIN pedido p ON pi.pedido_id = p.id
-                WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                  AND p.creado_en >= ?
-                  AND p.creado_en <= ?
-                GROUP BY c.id, c.nombre, c.categoria, c.marca, c.imagen, c.precio
-                ORDER BY total_vendido DESC
-                LIMIT ?
-                """;
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql)) {
+        String sql
+                = "SELECT c.id, c.nombre, c.categoria, c.marca, c.imagen, c.precio, "
+                + "SUM(pi.cantidad) AS total_vendido, "
+                + "SUM(pi.cantidad * pi.precio_unitario) AS ingresos "
+                + "FROM pedido_item pi "
+                + "JOIN catalogo c ON pi.catalogo_id = c.id "
+                + "JOIN pedido p ON pi.pedido_id = p.id "
+                + "WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO') "
+                + "  AND p.creado_en >= ? "
+                + "  AND p.creado_en <= ? "
+                + "GROUP BY c.id, c.nombre, c.categoria, c.marca, c.imagen, c.precio "
+                + "ORDER BY total_vendido DESC "
+                + "LIMIT ?";
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql)) {
 
             ps.setTimestamp(1, Timestamp.valueOf(desde.atStartOfDay()));
             ps.setTimestamp(2, Timestamp.valueOf(hasta.atTime(23, 59, 59)));
@@ -222,26 +208,23 @@ public class CatalogoEstadisticasDAO {
 
     // ─── VENTAS POR CATEGORÍA EN PERÍODO
     // ──────────────────────────────────────────
-
     public List<Map<String, Object>> getVentasPorCategoriaPeriodo(java.time.LocalDate desde,
             java.time.LocalDate hasta) {
         List<Map<String, Object>> resultado = new ArrayList<>();
-        String sql = """
-                SELECT c.categoria,
-                       SUM(pi.cantidad) AS unidades_vendidas,
-                       SUM(pi.cantidad * pi.precio_unitario) AS ingresos,
-                       COUNT(DISTINCT p.id) AS num_pedidos
-                FROM pedido_item pi
-                JOIN catalogo c ON pi.catalogo_id = c.id
-                JOIN pedido p ON pi.pedido_id = p.id
-                WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                  AND p.creado_en >= ?
-                  AND p.creado_en <= ?
-                GROUP BY c.categoria
-                ORDER BY ingresos DESC
-                """;
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql)) {
+        String sql
+                = "SELECT c.categoria, "
+                + "SUM(pi.cantidad) AS unidades_vendidas, "
+                + "SUM(pi.cantidad * pi.precio_unitario) AS ingresos, "
+                + "COUNT(DISTINCT p.id) AS num_pedidos "
+                + "FROM pedido_item pi "
+                + "JOIN catalogo c ON pi.catalogo_id = c.id "
+                + "JOIN pedido p ON pi.pedido_id = p.id "
+                + "WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO') "
+                + "  AND p.creado_en >= ? "
+                + "  AND p.creado_en <= ? "
+                + "GROUP BY c.categoria "
+                + "ORDER BY ingresos DESC";
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql)) {
 
             ps.setTimestamp(1, Timestamp.valueOf(desde.atStartOfDay()));
             ps.setTimestamp(2, Timestamp.valueOf(hasta.atTime(23, 59, 59)));
@@ -264,24 +247,21 @@ public class CatalogoEstadisticasDAO {
 
     // ─── INGRESOS TOTALES POR PERÍODO
     // ─────────────────────────────────────────────
-
     public Map<String, Object> getResumenPeriodo(java.time.LocalDate desde,
             java.time.LocalDate hasta) {
         Map<String, Object> resumen = new LinkedHashMap<>();
-        String sql = """
-                SELECT
-                    COALESCE(SUM(pi.cantidad * pi.precio_unitario), 0) AS ingresos_totales,
-                    COALESCE(SUM(pi.cantidad), 0) AS unidades_totales,
-                    COUNT(DISTINCT p.id) AS num_pedidos,
-                    COUNT(DISTINCT p.usuarioid) AS num_clientes
-                FROM pedido_item pi
-                JOIN pedido p ON pi.pedido_id = p.id
-                WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                  AND p.creado_en >= ?
-                  AND p.creado_en <= ?
-                """;
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql)) {
+        String sql
+                = "SELECT "
+                + "COALESCE(SUM(pi.cantidad * pi.precio_unitario), 0) AS ingresos_totales, "
+                + "COALESCE(SUM(pi.cantidad), 0) AS unidades_totales, "
+                + "COUNT(DISTINCT p.id) AS num_pedidos, "
+                + "COUNT(DISTINCT p.usuarioid) AS num_clientes "
+                + "FROM pedido_item pi "
+                + "JOIN pedido p ON pi.pedido_id = p.id "
+                + "WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO') "
+                + "  AND p.creado_en >= ? "
+                + "  AND p.creado_en <= ?";
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql)) {
 
             ps.setTimestamp(1, Timestamp.valueOf(desde.atStartOfDay()));
             ps.setTimestamp(2, Timestamp.valueOf(hasta.atTime(23, 59, 59)));
@@ -302,37 +282,34 @@ public class CatalogoEstadisticasDAO {
 
     // ─── DATOS COMPLETOS PARA EXPORTAR A EXCEL
     // ────────────────────────────────────
-
     public List<Map<String, Object>> getDatosExportacion(java.time.LocalDate desde,
             java.time.LocalDate hasta) {
         List<Map<String, Object>> resultado = new ArrayList<>();
-        String sql = """
-                SELECT p.id AS pedido_id,
-                       p.creado_en,
-                       p.estado,
-                       p.total AS pedido_total,
-                       u.nombre || ' ' || u.apellido AS cliente,
-                       u.email AS cliente_email,
-                       u.documento AS cliente_documento,
-                       d.departamento, d.ciudad,
-                       c.nombre AS producto,
-                       c.categoria,
-                       c.marca,
-                       pi.cantidad,
-                       pi.precio_unitario,
-                       (pi.cantidad * pi.precio_unitario) AS subtotal
-                FROM pedido p
-                JOIN usuario u ON p.usuarioid = u.id
-                JOIN direccion d ON p.direccionid = d.id
-                JOIN pedido_item pi ON pi.pedido_id = p.id
-                JOIN catalogo c ON pi.catalogo_id = c.id
-                WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO')
-                  AND p.creado_en >= ?
-                  AND p.creado_en <= ?
-                ORDER BY p.creado_en DESC, p.id, c.nombre
-                """;
-        try (Connection con = ConexionDB.getConnection();
-                PreparedStatement ps = con.prepareStatement(sql)) {
+        String sql
+                = "SELECT p.id AS pedido_id, "
+                + "p.creado_en, "
+                + "p.estado, "
+                + "p.total AS pedido_total, "
+                + "u.nombre || ' ' || u.apellido AS cliente, "
+                + "u.email AS cliente_email, "
+                + "u.documento AS cliente_documento, "
+                + "d.departamento, d.ciudad, "
+                + "c.nombre AS producto, "
+                + "c.categoria, "
+                + "c.marca, "
+                + "pi.cantidad, "
+                + "pi.precio_unitario, "
+                + "(pi.cantidad * pi.precio_unitario) AS subtotal "
+                + "FROM pedido p "
+                + "JOIN usuario u ON p.usuarioid = u.id "
+                + "JOIN direccion d ON p.direccionid = d.id "
+                + "JOIN pedido_item pi ON pi.pedido_id = p.id "
+                + "JOIN catalogo c ON pi.catalogo_id = c.id "
+                + "WHERE p.estado NOT IN ('CANCELADO', 'DEVUELTO') "
+                + "  AND p.creado_en >= ? "
+                + "  AND p.creado_en <= ? "
+                + "ORDER BY p.creado_en DESC, p.id, c.nombre";
+        try (Connection con = ConexionDB.getConnection(); PreparedStatement ps = con.prepareStatement(sql)) {
 
             ps.setTimestamp(1, Timestamp.valueOf(desde.atStartOfDay()));
             ps.setTimestamp(2, Timestamp.valueOf(hasta.atTime(23, 59, 59)));
